@@ -1,11 +1,9 @@
 package com.enablero.todo.config;
 
 import com.enablero.todo.repository.UserRepository;
-import com.enablero.todo.security.SecurityFilter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -16,7 +14,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
+
 
 @Configuration
 @EnableWebSecurity
@@ -25,6 +23,7 @@ public class SecurityConfig {
 
     @Value("${spring.security.oauth2.resourceserver.jwt.jwk-set-uri}")
     String jwtJwkSetUri;
+
 
     @Autowired
     private UserRepository userRepository;
@@ -35,7 +34,7 @@ public class SecurityConfig {
                 .csrf(httpSecurityCsrfConfigurer -> httpSecurityCsrfConfigurer.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()));
         http
-                .authorizeHttpRequests(req -> { req.requestMatchers("/graphql").permitAll().anyRequest().authenticated();});
+                .authorizeHttpRequests(req -> { req.requestMatchers("/graphql").authenticated().anyRequest().authenticated();});
         http
                 .oauth2ResourceServer(oauth -> {
                     oauth.jwt(jwt -> {jwt.jwkSetUri(jwtJwkSetUri);});
@@ -47,11 +46,10 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource(){
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:3000" , "http://localhost:3001" , "http://localhost:8000" , "http://localhost:8080"));
-        config.setAllowedMethods(Arrays.asList("GET" , "POST" , "PUT" , "DELETE"));
-        config.setAllowedHeaders(List.of("*"));
+        config.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        config.setAllowedHeaders(Arrays.asList("*"));
         config.setAllowCredentials(true);
-
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**" , config);
 
